[package]
name = "broke-but-quick"
version = "0.1.0"
edition = "2021"
rust-version = "1.73.0"
description = "Toy Message Broker over QUIC"
authors = ["Conrad Ludgate <conradludgate@gmail.com>"]
license = "AGPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quinn = "0.10.2"
quinn-proto = "0.10.2"
tokio = { version = "1.33.0", features = ["full", "macros"] }
rustls = "0.21.7"
ring = "0.17.5"
rustls-pemfile = "1.0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
rcgen = "0.11.3"
